--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.servlet.context-path=/api/
 # swagger-ui custom path http://localhost:8082/api/swagger-ui/index.html
 springdoc.swagger-ui.path=/swagger-ui.html
 
-#application port
-server.port=8082
+#application port 0= java will take a random port
+server.port=0
 
 # Mysql Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/Inventory
@@ -13,3 +13,5 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.application.name=inventory-service
