:sparkles: working in the spring cloud gateway

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>OrderService</module>
         <module>InventoryService</module>
         <module>DiscoveryServer</module>
+        <module>ApiGateway</module>
     </modules>
 
     <properties>
