--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -4,4 +4,6 @@ server.port=0
 # DatabaseConfig
 spring.data.mongodb.uri=mongodb+srv://JEstebanDev:mongo99JEstebanDev@cluster0.yek1baj.mongodb.net/microservice
 # Eureka config
-eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+
