:bookmark: Finish Implementation kafka

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>InventoryService</module>
         <module>DiscoveryServer</module>
         <module>ApiGateway</module>
+        <module>NotificationService</module>
     </modules>
 
     <properties>
