--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,14 @@ nb-configuration.xml
 .DS_Store
 
 settings.xml
+
+
+
+### My SQL Host Data ###
+my-sql-data
+mongo-data
+/mysql_keycloak_data/
+/postgres/
+/postgres-inventory/
+/postgres-order/
+/grafana/
