--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=0
 spring.application.name=inventory-service
 server.servlet.context-path=/api/
 # Mysql Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/Inventory
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
+spring.datasource.username=jestebandev
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
