:bookmark: Finish Project

--- a/DiscoveryServer/src/main/resources/application.properties
+++ b/DiscoveryServer/src/main/resources/application.properties
@@ -7,3 +7,5 @@ server.port=8761
 app.eureka.username=eureka
 app.eureka.password=password
 
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
