--- a/InventoryService/src/main/resources/application.properties
+++ b/InventoryService/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka/
+
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
