--- a/NotificationService/src/main/resources/application.properties
+++ b/NotificationService/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 #This config is for the json type mapping between the services
 spring.kafka.consumer.properties.spring.json.type.mapping=event:com.jestebandev.NotificationService.event.OrderPlacedEvent
+
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
