--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 # Config KeyCloak
 spring.security.oauth2.resourceserver.jwt.issuer-uri= http://localhost:8181/realms/springboot-microservice-realm
+
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
